# sar-object-detection

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  train.sh
.dvc/: config
data/raw/: .gitignore  COMBINED_SHIP_DETECTION_DATASET.dvc  SSDD.zip.dvc
docs/: models.md
src/: train.py
src/data/: preprocess.py
src/models/: faster_rcnn.py
src/utils/: backfill_speed.py  mlflow_utils.py
