[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sar-object-detection"
version = "0.1.0"
description = "SAR object detection with MLOps — comparing detection architectures on SAR imagery"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "ultralytics>=8.3",
    "mlflow>=2.14",
    "dagshub>=0.3",
    "dvc>=3.0",
    "dvc-s3>=3.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "pycocotools>=2.0",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
